--- a/example27/src/main/resources/templates/courses.html
+++ b/example27/src/main/resources/templates/courses.html
@@ -13,7 +13,7 @@ Author URL: http://w3layouts.com
   <!-- Google fonts -->
   <link href="//fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
   <!-- Template CSS Style link -->
-  <link rel="stylesheet" href="assets/css/style-starter.css">
+  <link rel="stylesheet" href="/assets/css/style-starter.css">
 </head>
 
 <body>
@@ -45,9 +45,9 @@ Author URL: http://w3layouts.com
     </div>
     <div class="row justify-content-center">
       <div class="col-lg-4 col-md-6">
-        <div class="coursecard-single">
+        <div class="course-card-single">
           <div class="grids5-info position-relative">
-            <img src="assets/images/c1.jpg" alt="" class="img-fluid" />
+            <img src="/assets/images/c1.jpg" alt="" class="img-fluid" />
             <div class="meta-list">
               <a>Education</a>
             </div>
@@ -66,9 +66,9 @@ Author URL: http://w3layouts.com
         </div>
       </div>
       <div class="col-lg-4 col-md-6 mt-md-0 mt-4">
-        <div class="coursecard-single">
+        <div class="course-card-single">
           <div class="grids5-info position-relative">
-            <img src="assets/images/c2.jpg" alt="" class="img-fluid" />
+            <img src="/assets/images/c2.jpg" alt="" class="img-fluid" />
             <div class="meta-list">
               <a class="sec-2">Meditation</a>
             </div>
@@ -87,9 +87,9 @@ Author URL: http://w3layouts.com
         </div>
       </div>
       <div class="col-lg-4 col-md-6 mt-lg-0 mt-4">
-        <div class="coursecard-single">
+        <div class="course-card-single">
           <div class="grids5-info position-relative">
-            <img src="assets/images/c3.jpg" alt="" class="img-fluid" />
+            <img src="/assets/images/c3.jpg" alt="" class="img-fluid" />
             <div class="meta-list">
               <a class="sec-3">Games</a>
             </div>
@@ -108,9 +108,9 @@ Author URL: http://w3layouts.com
         </div>
       </div>
       <div class="col-lg-4 col-md-6 mt-4">
-        <div class="coursecard-single">
+        <div class="course-card-single">
           <div class="grids5-info position-relative">
-            <img src="assets/images/c4.jpg" alt="" class="img-fluid" />
+            <img src="/assets/images/c4.jpg" alt="" class="img-fluid" />
             <div class="meta-list">
               <a href="courses.html">Development</a>
             </div>
@@ -128,9 +128,9 @@ Author URL: http://w3layouts.com
         </div>
       </div>
       <div class="col-lg-4 col-md-6 mt-4">
-        <div class="coursecard-single">
+        <div class="course-card-single">
           <div class="grids5-info position-relative">
-            <img src="assets/images/c5.jpg" alt="" class="img-fluid" />
+            <img src="/assets/images/c5.jpg" alt="" class="img-fluid" />
             <div class="meta-list">
               <a class="sec-2">Audio & Music</a>
             </div>
@@ -148,9 +148,9 @@ Author URL: http://w3layouts.com
         </div>
       </div>
       <div class="col-lg-4 col-md-6 mt-4">
-        <div class="coursecard-single">
+        <div class="course-card-single">
           <div class="grids5-info position-relative">
-            <img src="assets/images/c6.jpg" alt="" class="img-fluid" />
+            <img src="/assets/images/c6.jpg" alt="" class="img-fluid" />
             <div class="meta-list">
               <a class="sec-3">Art & Design</a>
             </div>
@@ -204,17 +204,17 @@ Author URL: http://w3layouts.com
 <!-- //move top -->
 
 <!-- common jquery plugin -->
-<script src="assets/js/jquery-3.3.1.min.js"></script>
+<script src="/assets/js/jquery-3.3.1.min.js"></script>
 <!-- //common jquery plugin -->
 
 <!-- theme switch js (light and dark)-->
-<script src="assets/js/theme-change.js"></script>
+<script src="/assets/js/theme-change.js"></script>
 <!-- //theme switch js (light and dark)-->
 
 <!-- MENU-JS -->
 <script>
   $(window).on("scroll", function () {
-    var scroll = $(window).scrollTop();
+    let scroll = $(window).scrollTop();
 
     if (scroll >= 80) {
       $("#site-header").addClass("nav-fixed");
@@ -251,7 +251,7 @@ Author URL: http://w3layouts.com
 <!-- //disable body scroll which navbar is in active -->
 
 <!-- bootstrap -->
-<script src="assets/js/bootstrap.min.js"></script>
+<script src="/assets/js/bootstrap.min.js"></script>
 <!-- //bootstrap -->
 <!-- //Js scripts -->
 </body>
