--- a/example27/src/main/resources/templates/header.html
+++ b/example27/src/main/resources/templates/header.html
@@ -4,7 +4,7 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 
 <head>
-
+  <title>Header</title>
 </head>
 
 <body>
