--- a/example27/src/main/resources/templates/holidays.html
+++ b/example27/src/main/resources/templates/holidays.html
@@ -125,7 +125,7 @@ Author URL: http://w3layouts.com
 <!-- MENU-JS -->
 <script>
   $(window).on("scroll", function () {
-    var scroll = $(window).scrollTop();
+    let scroll = $(window).scrollTop();
 
     if (scroll >= 80) {
       $("#site-header").addClass("nav-fixed");
